# igdl

./: .gitignore  README.md  pyproject.toml
igdl/: cli.py  config.py  downloader.py
